fixed overflow issue with styling

--- a/src/styles/Item.css
+++ b/src/styles/Item.css
@@ -43,6 +43,7 @@ fieldset {
 .rarity {
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 985px) {
